bk_ida/gccida/c1/subst
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3791:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3795:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3795:5: error: use of undeclared identifier 'v13'
rtx v13; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3796:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3796:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3798:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3811:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3811:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3812:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3812:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3822:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3822:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3825:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3826:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3826:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3830:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3830:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3834:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // [rsp+14h] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/combine.c:3889:1: error: use of undeclared identifier 'v13'
v13 = v6; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst/src/obj/combine.o] Error 1
